k8s-specifications/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - image: 261610780523.dkr.ecr.eu-central-1.amazonaws.com/voting-app-repo:result
        name: result
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: result
