k8s-specifications/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: 163567341888.dkr.ecr.eu-central-1.amazonaws.com/voting-app-repo:vote
        name: vote
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: vote
