k8s-specifications/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: 163567341888.dkr.ecr.eu-central-1.amazonaws.com/voting-app-repo:worker
        name: worker
        imagePullPolicy: Always
